--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -9,9 +9,9 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Small visual indicators showing counts or statuses.
+                    p !{cont("ELEMENTS_BADGE_SUB_TITLE")}
             .section-contents
-                h4.contents-title 기본
+                h4.contents-title Base
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
@@ -39,7 +39,7 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title 타입
+                h4.contents-title Type
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
@@ -58,7 +58,7 @@ block contents
                                     |  #{`<!-- Mark Type -->`}
                                     | #{code1}
             .section-contents
-                h4.contents-title 원과 함꼐
+                h4.contents-title Round
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.icon.circle
@@ -75,7 +75,7 @@ block contents
                                     | #{code}
                                     | #{code1}
             .section-contents
-                h4.contents-title 텍스트 사용
+                h4.contents-title Text
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
@@ -93,15 +93,15 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title 그림자
+                h4.contents-title Shadow
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
-                            | 그림자
+                            | Shadow
                             span.ga-badge.float.secondary.shadow
                                 i.xi-radiobox-blank
                         .ga-button
-                            | 그림자
+                            | Shadow
                             span.ga-badge.float.secondary
                                 i.xi-close
                     .footer
@@ -110,7 +110,7 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title 정렬
+                h4.contents-title Align
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
@@ -128,7 +128,7 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title 색상
+                h4.contents-title Colors
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
