--- a/site/views/components/calendar.pug
+++ b/site/views/components/calendar.pug
@@ -9,9 +9,9 @@ block contents
       .section-title
         h1= title
         .section-desc 
-          p Date picker and scheduling UI component.
+          p !{cont("ELEMENTS_CALENDAR_SUB_TITLE")}
       .section-contents
-        h4 기본
+        h4 Base
         .ga-segment.float.round-xl.attached
           .contents-wrapper.flex-wrap
             .ga-calendar
