--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -9,7 +9,7 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Multi-select input with accessible and clear visual states.
+                    p !{cont("ELEMENTS_CHECKBOX_SUB_TITLE")}
             .section-contents
                 h4.contents-title 기본
                 .ga-segment.float.round-xl.attached
