--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -9,9 +9,9 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Layout utility using CSS Grid for structured alignment.(Flex)
+                    p !{cont("LAYOUT_GRID_SUB_TITLE")}
             .section-contents
-                h4.contents-title 기본
+                h4.contents-title Base
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.divide
@@ -25,7 +25,7 @@ block contents
                             code.language-markup
                                 | #{code}
             .section-contents
-                h4.contents-title 균등 분할
+                h4.contents-title Divide (equaly)
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.divide-2
@@ -42,7 +42,7 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title  분할 구성
+                h4.contents-title Divide
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.right-side
