--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -9,15 +9,15 @@ block contents
             .section-title
                 h1= title
                 .section-desc
-                    p Text input fields with consistent styling and focus handling.
+                    p !{cont("ELEMENTS_INPUT_SUB_TITLE")}
             .section-contents
                 h4.contents-title 기본
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input
-                            input(type="text", placeholder="입력하세요", value="Frog")
+                            input(type="text", placeholder="Insert text", value="Frog")
                     .footer
-                        - var code = '<div class="ga-input">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -26,9 +26,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.disabled
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input disabled">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input disabled">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -37,9 +37,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.readonly
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input disabled">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input disabled">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -48,9 +48,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.underline
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input underline">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input underline">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -59,9 +59,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.transparent
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input transparent">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input transparent">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -70,9 +70,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.compact
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input compact">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input compact">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -81,11 +81,11 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.edit
-                            input(type="text", placeholder="입력하세요", value="원래 값")
+                            input(type="text", placeholder="Insert text", value="원래 값")
                         .ga-button.icon.circle.edit-btn
                             i.xi-pen
                     .footer
-                        - var code = '<div class="ga-input edit">\n    <input type="text" placeholder="입력하세요" />\n    <button class="ga-button icon edit-btn">\n        <i class="fa fa-pen"></i>\n    </button>\n</div>'
+                        - var code = '<div class="ga-input edit">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button icon edit-btn">\n        <i class="fa fa-pen"></i>\n    </button>\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -96,21 +96,21 @@ block contents
                         .ga-grid
                             .column.span-3.span-xs-8
                                 .ga-input.success
-                                    input(type="text", placeholder="성공")
+                                    input(type="text", placeholder="Success")
                             .column.span-3.span-xs-8
                                 .ga-input.danger
-                                    input(type="text", placeholder="에러발생")
+                                    input(type="text", placeholder="Error")
                             .column.span-3.span-xs-8
                                 .ga-input.info
-                                    input(type="text", placeholder="정보")
+                                    input(type="text", placeholder="Info")
                             .column.span-3.span-xs-8
                                 .ga-input.attention
-                                    input(type="text", placeholder="경고")
+                                    input(type="text", placeholder="Attention")
                             .column.span-3.span-xs-8
                                 .ga-input.importance
-                                    input(type="text", placeholder="중요")
+                                    input(type="text", placeholder="Impotance")
                     .footer
-                        - var code = '<div class="ga-input { STATUS }">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input { STATUS }">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -119,9 +119,9 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.fluid
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input fluid">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input fluid">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -132,7 +132,7 @@ block contents
                         .ga-input.unit(data-unit='대')
                             input.align-right(type="text", placeholder="0")
                     .footer
-                        - var code = '<div class="ga-input unit" data-unit="{ unit text }">\n    <input type="text" placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input unit" data-unit="{ unit text }">\n    <input type="text" placeholder="Insert text" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -144,23 +144,23 @@ block contents
                             .column.span-3.span-xs-8
                                 | Left
                                 .ga-input.icon.left
-                                    input(type="text", placeholder="입력하세요")
+                                    input(type="text", placeholder="Insert text")
                                     i.icon.xi-search
                             .column.span-3.span-xs-8
                                 | Right
                                 .ga-input.icon.right.link
-                                    input(type="text", placeholder="입력하세요")
+                                    input(type="text", placeholder="Insert text")
                                     i.icon.xi-search.circle
                             .column.span-3.span-xs-8
                                 | Both
                                 .ga-input.icon.both
                                     i.icon.xi-search
-                                    input(type="text", placeholder="입력하세요")
+                                    input(type="text", placeholder="Insert text")
                                     i.icon.xi-angle-up
                     .footer
-                        - var code = '<div class="ga-input icon left">\n    <input type="text" placeholder="입력하세요" />\n    <i class="fa fa-icon"></i>\n</div>'
-                        - var code1 = '<div class="ga-input icon right link">\n    <input type="text" placeholder="입력하세요" />\n    <i class="fa fa-icon"></i>\n</div>'
-                        - var code2 = '<div class="ga-input icon both">\n    <i class="fa fa-icon"></i>\n    <input type="text" placeholder="입력하세요" />\n    <i class="fa fa-icon"></i>\n</div>'
+                        - var code = '<div class="ga-input icon left">\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
+                        - var code1 = '<div class="ga-input icon right link">\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
+                        - var code2 = '<div class="ga-input icon both">\n    <i class="fa fa-icon"></i>\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
                             pre
                                 code.language-markup
                                     | #{`<!-- Left -->`}
@@ -174,10 +174,10 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.badge
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                             .ga-badge.secondary 30
                     .footer
-                        - var code = '<div class="ga-input badge">\n    <input type="text" placeholder="입력하세요" />\n    <span class="ga-badge">B</span>\n</div>'
+                        - var code = '<div class="ga-input badge">\n    <input type="text" placeholder="Insert text" />\n    <span class="ga-badge">B</span>\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -186,17 +186,17 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.labeled.right.inline
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                             label 원
                         .ga-input.labeled.right.inline
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                             label.outline 0/30
                         .ga-input.labeled.left.inline
                             label Name
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input labeled left">\n    <input type="text" placeholder="입력하세요" />\n    <label>Label Text</label>\n</div>'
-                        - var code1 = '<div class="ga-input labeled right">\n    <input type="text" placeholder="입력하세요" />\n    <label>Label Text</label>\n</div>'
+                        - var code = '<div class="ga-input labeled left">\n    <input type="text" placeholder="Insert text" />\n    <label>Label Text</label>\n</div>'
+                        - var code1 = '<div class="ga-input labeled right">\n    <input type="text" placeholder="Insert text" />\n    <label>Label Text</label>\n</div>'
                             pre
                                 code.language-markup
                                     | #{`<!-- Left -->`}
@@ -208,15 +208,15 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.button.left
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                             .ga-button 저장
                         .ga-input.button.right
-                            input(type="text", placeholder="입력하세요")
+                            input(type="text", placeholder="Insert text")
                             .ga-button.icon
                                 i.xi-documents-o
                     .footer
-                        - var code = '<div class="ga-input button left">\n    <input type="text" placeholder="입력하세요" />\n    <button class="ga-button">Button Text</button>\n</div>'
-                        - var code1 = '<div class="ga-input button right">\n    <input type="text" placeholder="입력하세요" />\n    <button class="ga-button">Button Text</button>\n</div>'
+                        - var code = '<div class="ga-input button left">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button">Button Text</button>\n</div>'
+                        - var code1 = '<div class="ga-input button right">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button">Button Text</button>\n</div>'
                             pre
                                 code.language-markup
                                     | #{`<!-- Left -->`}
@@ -228,12 +228,12 @@ block contents
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-input.fluid
-                            textarea(placeholder="입력하세요")
+                            textarea(placeholder="Insert text")
                         .ga-input.short.fluid
-                            textarea(placeholder="입력하세요")
+                            textarea(placeholder="Insert text")
                     .footer
-                        - var code = '<div class="ga-input">\n    <textarea placeholder="입력하세요" />\n</div>'
-                        - var code1 = '<div class="ga-input short">\n    <textarea placeholder="입력하세요" />\n</div>'
+                        - var code = '<div class="ga-input">\n    <textarea placeholder="Insert text" />\n</div>'
+                        - var code1 = '<div class="ga-input short">\n    <textarea placeholder="Insert text`" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
