--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -9,9 +9,9 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p UI for navigating through multiple pages of content. 
+                    p !{cont("ELEMENTS_PAGINATION_SUB_TITLE")} 
             .section-contents
-                h4.contents-title 기본
+                h4.contents-title Base
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination
@@ -44,7 +44,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 기본 (표시 수 제한)
+                h4.contents-title  Limit displayed Number
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination
@@ -90,7 +90,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 버튼 스타일
+                h4.contents-title Button
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.number.circle
@@ -121,7 +121,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 사용자 스타일
+                h4.contents-title User costom Style
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.number
@@ -157,7 +157,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 페이지 타입
+                h4.contents-title Page type
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.page
@@ -185,7 +185,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 조그맣게
+                h4.contents-title Compact
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.compact.number
@@ -216,7 +216,7 @@ block contents
                                 | #{code_c_r}
                                 | #{code_f}
             .section-contents
-                h4.contents-title 정렬
+                h4.contents-title Align
                 .ga-segment.float.round-xl.attached
                     - var items = [2, 3, 4, 5]
                     .contents-wrapper
