--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -9,9 +9,9 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p UI for toggling between content sections in a tabbed layout. 
+                    p !{cont("ELEMENTS_TABS_SUB_TITLE")}
             .section-contents
-                h4.contents-title 기본
+                h4.contents-title Base
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs
