--- a/site/views/components/tag.pug
+++ b/site/views/components/tag.pug
@@ -9,13 +9,13 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Compact label elements used for status indicators or filters. 
+                    p !{cont("ELEMENTS_TAG_SUB_TITLE")} 
             .section-contents
                 h4.contents-title 기본
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label Standard
-                        .ga-tag.label 라벨
+                        .ga-tag.label Label
                         .ga-tag.label
                             i.xi-user
                         .ga-tag.label
