--- a/src/gcloud.scss
+++ b/src/gcloud.scss
@@ -49,3 +49,4 @@
 @import './definitions/components/modal';
 @import './definitions/components/toast';
 @import './definitions/components/card';
+@import './definitions/components/tooltip';
