--- a/site/public/css/reset.css
+++ b/site/public/css/reset.css
@@ -24,9 +24,11 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-html {box-sizing:border-box;font-size: 14px;}
+html {
+  box-sizing:border-box;
+}
 body {
-	line-height: 1;
+	line-height: 1.4;
 }
 ol, ul {
 	list-style: none;
