--- a/site/views/components/grid2.pug
+++ b/site/views/components/grid2.pug
@@ -9,9 +9,9 @@ block contents
             .section-title
                 h1= title
                 .section-desc
-                    p Layout utility using CSS Grid for structured alignment.(Grid)
+                    p !{cont("LAYOUT_GRID2_SUB_TITLE")}
             .section-contents
-                h4.contents-title 기본
+                h4.contents-title Base
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.divide-column-8.row-2
@@ -25,7 +25,7 @@ block contents
                             code.language-markup
                                 | #{code}
             .section-contents
-                h4.contents-title 도시락
+                h4.contents-title Dosirak
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.dosirak.set-rows(style="--grid-col-num: 4; --grid-row-num: 3; --rows-height: 10rem")
@@ -37,7 +37,7 @@ block contents
                             code.language-markup
                                 | #{code}
             .section-contents
-                h4.contents-title 분할 구성
+                h4.contents-title Divide
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2
@@ -59,7 +59,7 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
-                h4.contents-title 분할 구성 (+ROW)
+                h4.contents-title Divide (+ROW)
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.set-rows(style="--grid-row-num: 9")
@@ -85,41 +85,11 @@ block contents
                             .column
                             .column
                     .footer
-                        - var code = `<div class="ga-grid2 auto-fit">\n    <div class="column" />\n    <div class="column" />\n    ...\n    <div class="column" /> // grid column 보다 작은 column 갯수 일 때 \n</div>`
+                        - var code = `<div class="ga-grid2 auto-fit">\n    <div class="column" />\n    <div class="column" />\n    ...\n    <div class="column" />\n <!-- if (grid column > column)--> \n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
-            .section-contents
-                h4.contents-title Auto-fit
-                .ga-segment.float.round-xl.attached
-                    .contents-wrapper
-                        .ga-grid2(style="--grid-col-num: 4; --grid-gap: 20px")
-                            .column.col-2
-                                .card
-                            .column.col-1
-                                .card
-                            .column.col-1.row-2
-                                .card
-                            .column.col-1
-                                .card
-                            .column.col-1
-                                .card
-                            .column.col-1.row-2
-                                .card
-                            .column.col-2
-                                .card
-                            .column.col-1.row-1
-                                .card
-                            .column.col-2
-                                .card
-                            .column.col-2
-                                .card
-                    .footer
-                        - var code = `<div class="ga-grid2 auto-fit">\n    <div class="column" />\n    <div class="column" />\n    ...\n    <div class="column" /> // grid column 보다 작은 column 갯수 일 때 \n</div>`
-                            pre
-                                code.language-markup
-                                    | #{code}
-            .section-contents
+            //- .section-contents
                 h4.contents-title  Grid + Table
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
