--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -9,7 +9,7 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Structured list styling for displaying repeated content.  
+                    p !{cont("ELEMENTS_LIST_SUB_TITLE")}  
             .section-contents
                 h4.contents-title 기본
                 .ga-segment.float.round-xl.attached
