--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -9,14 +9,14 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Dropdown UI for selecting a single item from options.
+                    p !{cont("ELEMENTS_SELECTBOX_SUB_TITLE")}
             .section-contents
-                h4.contents-title 기본 - Dropdown
+                h4.contents-title Base - Dropdown
                 .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-select-box.dropdown.open
                             .selected-item.ga-input.icon.right
-                                input(type="text", placeholder="선택하세요", readonly)
+                                input(type="text", placeholder="Select option", readonly)
                                 i.icon.xi-angle-down
                             .select-menu
                                 .ga-list.selection
@@ -57,7 +57,7 @@ block contents
                         .ga-select-box.float
                             .selected-item.ga-input.icon.both
                                 i.icon.xi-search
-                                input(type="text", placeholder="선택하세요")
+                                input(type="text", placeholder="Select option")
                                 i.icon.xi-angle-down
                             .select-menu
                                 .ga-list.selection
@@ -88,7 +88,7 @@ block contents
                         .ga-select-box.dropdown.compact
                             .selected-item.ga-input.icon.both
                                 i.icon.xi-search
-                                input(type="text", placeholder="선택하세요")
+                                input(type="text", placeholder="Select option")
                                 i.icon.xi-angle-down
                             .select-menu
                                 .ga-list.selection
@@ -120,7 +120,7 @@ block contents
                             select
                                 each col in ['', 1, 2, 3, 4, 5, 6]
                                     if col == ''
-                                        option(default, value=`${col}`)= '선택'
+                                        option(default, value=`${col}`)= 'Select'
                                     else
                                         option(value=`${col}`)= `option${col}`
                             i.icon.xi-angle-down
@@ -152,7 +152,7 @@ block contents
                             select
                                 each col in ['', 1, 2, 3, 4, 5, 6]
                                     if col == ''
-                                        option(default, value=`${col}`)= '선택'
+                                        option(default, value=`${col}`)= 'Select'
                                     else
                                         option(value=`${col}`)= `option${col}`
                             i.icon.xi-angle-down
