--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -18,6 +18,7 @@ html
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.css")
         script(src="/prism/prism.js")
         link(href="/prism/prism.css", rel="stylesheet")
+        link(href="/css/reset.css", rel="stylesheet")
         link(id="frogui-css", href="/frogui.css", rel="stylesheet")
         link(href="/css/style.css", rel="stylesheet")
         script(async, src="https://plausible.io/js/pa-PNF1ZKkVWIqCuHg5qB1bO.js")
@@ -56,6 +57,9 @@ html
                                 | Be-UI 
                                 .in-badge.ga-green vue
                                 a.link(href="https://beui.vercel.app/", target="_blank") 
+                        .divide
+                            .ga-button.text |
+                        .locale
                         .divide
                             .ga-button.text |
                         .mode
