--- a/src/definitions/bases/root.scss
+++ b/src/definitions/bases/root.scss
@@ -6,6 +6,7 @@
 :root {
     --bgc: #{map.get($grays, 'gray-0')};
     --txt: #{map.get($grays, 'gray-95')};
+    --txt-light: #{map.get($grays, 'gray-85')};
     --brd: #{map.get($grays, 'gray-15')};
 
     --suf: #{map.get($grays, 'gray-5')};
@@ -37,6 +38,7 @@
     :root {
         --bgc: #{map.get($grays, 'gray-95')};
         --txt: #{map.get($grays, 'gray-0')};
+        --txt-light: #{map.get($grays, 'gray-10')};
         --brd: #{map.get($grays, 'gray-85')};
 
         --suf: #{map.get($grays, 'gray-90')};
@@ -50,12 +52,14 @@
         // --depth-bg: #{map.get($grays, 'gray-80')};
         // --depth-bg: rgba(0, 0, 0, 0.2);
         --depth-bs: none;
+
     }
 }
 
 :root.light-mode {
     --bgc: #{map.get($grays, 'gray-0')};
     --txt: #{map.get($grays, 'gray-95')};
+    --txt-light: #{map.get($grays, 'gray-85')};
     --brd: #{map.get($grays, 'gray-15')};
     --suf: #{map.get($grays, 'gray-5')};
     --hover-suf: #{map.get($grays, 'gray-10')};
@@ -70,6 +74,7 @@
 :root.dark-mode {
     --bgc: #{map.get($grays, 'gray-95')};
     --txt: #{map.get($grays, 'gray-0')};
+    --txt-light: #{map.get($grays, 'gray-10')};
     --brd: #{map.get($grays, 'gray-85')};
     --suf: #{map.get($grays, 'gray-90')};
     --hover-suf: #{map.get($grays, 'gray-85')};
@@ -77,7 +82,6 @@
     --base-color: #{map.get($grays, 'gray-80')};
     --base-hover-color: #{map.get($grays, 'gray-70')};
 
-    // --depth-bg: #{map.get($grays, 'gray-80')};
     --depth-bg: color-mix(in oklab, #{map.get($grays, 'gray-95')}, rgba(0, 0, 0, 0.04));
     --depth-bs: 0 0 0 1px rgba(0, 0, 0, 0.16);
 }
