--- a/src/definitions/components/card.scss
+++ b/src/definitions/components/card.scss
@@ -1,57 +1,18 @@
-// .#{$ns}-card {
-//   width: 100%;
-//   background-color: $cardBackgroundColor;
-//   box-shadow: $cardBoxShadow;
-//   margin: 20px 0;
-//   border-radius: $cardBorderRadius;
-//   > .title {
-//     // font-family: 'Spoqa Han Sans Bold';
-//     font-size: 2em;
-//     font-weight: 700;
-//     margin-bottom: 20px;
-//     padding: $cardVerticalPadding $cardHorizontalPadding 0;
-//   }
-//   > div, .contents {
-//     padding: $cardVerticalPadding $cardHorizontalPadding;
-//   }
 
-//   &.attached {
-//     > .header {
-//       // margin-left: $cardHorizontalPadding * -1;
-//       // margin-right: $cardHorizontalPadding * -1;
-//       // margin-top: $cardVerticalPadding * -1;
-//       // margin-bottom: $cardVerticalPadding;
-//       // > div {
-//       //   padding: ($cardVerticalPadding * 0.5) $cardHorizontalPadding
-//       // }
-//       border-top-left-radius: $cardBorderRadius;
-//       border-top-right-radius: $cardBorderRadius;
-//     }
-//     > .footer {
-//       // margin-left: $cardHorizontalPadding * -1;
-//       // margin-right: $cardHorizontalPadding * -1;
-//       // margin-bottom: $cardVerticalPadding * -1;
-//       // margin-top: $cardVerticalPadding;
-//       // > div {
-//       //   padding: ($cardVerticalPadding * 0.5) $cardHorizontalPadding
-//       // }
-//       border-bottom-left-radius: $cardBorderRadius;
-//       border-bottom-right-radius: $cardBorderRadius;
-//     }
-//   }
-// }
-
+@use 'sass:color';
 
 $cardBackgroundColor: var(--depth-bg);
 $cardBoxShadow: var(--depth-bs);
-$cardHorizontalPadding: 14px;
-$cardVerticalPadding: 14px;
-
+$cardHorizontalPadding: 20px;
+$cardVerticalPadding: 16px;
+$maxCardColumn: 12;
+$cardsGap: 12px;
 .#{$ns} {
   &-card {
+    --card-width: 300px;
     position: relative;
     max-width: 100%;
-    width: 290px;
+    width: var(--card-width);
     background-color: $cardBackgroundColor;
     overflow: hidden;
     display: flex;
@@ -69,6 +30,7 @@ $cardVerticalPadding: 14px;
     &.surface {
       background-color: var(--suf);
     }
+
     &.round {
       &-s {
         border-radius: calc($baseBorderRadius * 0.5);
@@ -86,35 +48,32 @@ $cardVerticalPadding: 14px;
     > div {
       padding: $cardVerticalPadding $cardHorizontalPadding;
     }
-    > .image {
-      width: 100%;
-      padding: 0;
-      // border-top-left-radius: inherit;
-      // border-top-right-radius: inherit;
-      // overflow: hidden;
-      img {
-        width: 100%;
-      }
-    }
-    .title {
-      font-size: 1.2em;
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
+    
   
     > .extra {
       padding: $cardVerticalPadding $cardHorizontalPadding;
     }
-  
+    &.media {
+      > .image {
+        width: 100%;
+        padding: 0;
+        // border-top-left-radius: inherit;
+        // border-top-right-radius: inherit;
+        // overflow: hidden;
+        img {
+          width: 100%;
+        }
+      }
+    }
     &.attached {
       > .header {
-        padding: 0;
+        // padding: 0;
         background-color: var(--suf);
         border-top-left-radius: inherit;
         border-top-right-radius: inherit;
       }
       > .footer {
-        padding: 0;
+        // padding: 0;
         background-color: var(--suf);
         border-bottom-left-radius: inherit;
         border-bottom-right-radius: inherit;
@@ -122,6 +81,11 @@ $cardVerticalPadding: 14px;
     }
     > .contents {
       flex-grow: 1;
+      flex-shrink: 0;
+      padding: $cardHorizontalPadding;
+      .title {
+        margin-bottom: 20px;
+      }
     }
   }
   
@@ -129,6 +93,13 @@ $cardVerticalPadding: 14px;
     display: flex;
     flex-wrap: wrap;
     gap: 12px;
+    &.column {
+      @for $i from 1 through $maxCardColumn {
+        &-#{$i} > .#{$ns}-card {
+          width: calc(100% / $i - $cardsGap);
+        }
+      }
+    }
     .#{$ns}-card {
       .float {
         box-shadow: none;
