--- a/src/definitions/components/form.scss
+++ b/src/definitions/components/form.scss
@@ -65,9 +65,10 @@ $gridGutter: 4;
       }
     }
     &[disabled], &.disabled {
+      cursor: not-allowed;
       > input, > textarea {
-        background: #EBEBEB;
-        border-color: #d6d6d6;
+
+        opacity: .5;
         pointer-events: none;
       }
       > label, .label {
