--- a/src/definitions/components/list.scss
+++ b/src/definitions/components/list.scss
@@ -1,3 +1,5 @@
+$listItemPadding: calc($verticalInputPadding + 2px);
+
 .#{$ns}-list {
   max-height: 100%;
   > .item {
@@ -5,6 +7,7 @@
     display: flex;
     align-items: center;
     color: var(--txt);
+    padding: $listItemPadding;
     .item-title {
       flex: 0 1 auto;
     }
@@ -252,4 +255,14 @@
   //     }
   //   }
   // }
+}
+
+.#{$ns}-list-group {
+  .group-title {
+    opacity: 0.5;
+    padding: $listItemPadding;
+    & + .ga-list {
+      margin-left: 10px;
+    }
+  }
 }
