--- a/src/definitions/components/segment.scss
+++ b/src/definitions/components/segment.scss
@@ -1,61 +1,20 @@
 
 $segmentBgColor: var(--depth-bg);
 $segmentBoxShadow: var(--depth-bs);
-$segmentHorizontalPadding: 14px;
-$segmentVerticalPadding: 14px;
+$segmentText: var(--txt-light);
+$segmentHorizontalPadding: 20px;
+$segmentVerticalPadding: 16px;
 
 .#{$ns} {
-  &-segments {
-    background-color: $segmentBgColor;
-    .#{$ns}-segment {
-      margin: 0;
-      border-radius: 0;
-      background-color: transparent;
-      &.border {
-        border: 0;
-      }
-      &.float {
-        box-shadow: none;
-      }
-      &[class*='round-'] {
-        border-radius: 0;
-      }
-    }
-    &.border {
-      border: 1px solid var(--brd);
-      .#{$ns}-segment.border {
-        border-bottom: 1px solid var(--brd);
-        &:last-child {
-          border: 0;
-        }
-      }
-    }
-    &.float {
-      box-shadow: $segmentBoxShadow;
-    }
-    &.round {
-      &-s {
-        border-radius: calc($baseBorderRadius * 0.5);
-      }
-      &-m {
-        border-radius: $baseBorderRadius;
-      }
-      &-l {
-        border-radius: calc($baseBorderRadius * 2);
-      }
-      &-xl {
-        border-radius: calc($baseBorderRadius * 4);
-      }
-    }
-  }
   &-segment {
     border-radius: $baseBorderRadius;
   
     background-color: $segmentBgColor;
+    color: $segmentText;
     margin-bottom: 12px;
     overflow: auto;
     & > div {
-      padding: $segmentHorizontalPadding;
+      padding: $segmentVerticalPadding $segmentHorizontalPadding;
     }
     &:last-child {
       margin: 0;
@@ -148,6 +107,57 @@ $segmentVerticalPadding: 14px;
         &:hover:after {
           opacity: 1;
         }
+      }
+    }
+     > .contents {
+      padding: $segmentHorizontalPadding;
+      > .title {
+        font-size: 1.5em;
+        margin-bottom: 20px;
+        color: var(--txt);
+      }
+    }
+  }
+  &-segments {
+    background-color: $segmentBgColor;
+    .#{$ns}-segment {
+      margin: 0;
+      border-radius: 0;
+      background-color: transparent;
+      &.border {
+        border: 0;
+      }
+      &.float {
+        box-shadow: none;
+      }
+      &[class*='round-'] {
+        border-radius: 0;
+      }
+    }
+    &.border {
+      border: 1px solid var(--brd);
+      .#{$ns}-segment.border {
+        border-bottom: 1px solid var(--brd);
+        &:last-child {
+          border: 0;
+        }
+      }
+    }
+    &.float {
+      box-shadow: $segmentBoxShadow;
+    }
+    &.round {
+      &-s {
+        border-radius: calc($baseBorderRadius * 0.5);
+      }
+      &-m {
+        border-radius: $baseBorderRadius;
+      }
+      &-l {
+        border-radius: calc($baseBorderRadius * 2);
+      }
+      &-xl {
+        border-radius: calc($baseBorderRadius * 4);
       }
     }
   }
