--- a/src/themes/gcloud/bases/variables.scss
+++ b/src/themes/gcloud/bases/variables.scss
@@ -59,7 +59,7 @@ $bolder: 900;
 //
 //line height
 //
-$lineHeight: calc(18 / $baseFontSize);
+$lineHeight: calc(22 / $baseFontSize);
 
 //
 //letter spacing
@@ -83,9 +83,12 @@ $borderDarkColor:  map.get($grays, 'gray-25');
 $background: #FFFFFF;
 $dModeBackground: #333333;
 
-//#definitions
+// spacing
+$spacingUnit: 4px;
 
-//
+@function spacing($unit) {
+    @return calc($unit * $spacingUnit);
+}
 // colors
 //
 
@@ -236,6 +239,11 @@ $largeSize: relativePx(18);
 $hugeSize: relativePx(26);
 $massiveSize: relativePx(32);
 
+// hero style
+$heroLarge: relativePx(56); //4em (x14px)
+$hero: relativePx(42); //3em (x14px)
+$heroSub: relativePx(18); 
+$heroSmall: relativePx(24); 
 // Scroll Bars
 
 $useCustomScrollbars: true;
